--- a/web/.project
+++ b/web/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>hackathon</name>
+	<name>hackathon-webapp</name>
 	<comment></comment>
 	<projects>
 		<project>ShareTrading</project>
